hero image added

--- a/Index3.html
+++ b/Index3.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="styles/main.css" />
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="./css/index3.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -19,5 +18,53 @@
 
 <body>
 </body>
+<!-- header starts here -->
+
+<header>
+    <section class="container px-0">
+        <nav class="navbar navbar-expand-lg  navbar-light">
+            <a class="navbar-brand a-text flex" href="index3.html">
+                <img src="./index3-img/logo.svg" alt="Logo">
+            </a>
+            <button class="navbar-toggler" style="color: lemonchiffon !important;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                <ul class="navbar-nav mr-auto">
+
+                </ul>
+
+                <ul class="navbar-nav my-2 my-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link mx-3" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link mx-3" href="#">Gallery</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link mx-3" href="#">About<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link mx-3" href="#"> Contact</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link mx-3" href="#"> Services</a>
+                    </li>
+                </ul>
+
+            </div>
+        </nav>
+    </section>
+</header>
+
+<section class="hero">
+    <div class="container text-light">
+        <div class="">
+            <h2 class="pt-5"> We Are On The Ultimate Mission To Make You See Beauty In Yourself Or Your Products.</h2>
+        </div>
+    </div>
+</section>
 
 </html>
