--- a/Index3.html
+++ b/Index3.html
@@ -36,7 +36,7 @@
 
                 </ul>
 
-                <ul class="navbar-nav my-2 my-lg-0">
+                <ul class="navbar-nav my-2 my-lg-0 ">
                     <li class="nav-item active">
                         <a class="nav-link mx-3" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
@@ -61,9 +61,15 @@
 
 <section class="hero">
     <div class="container text-light">
-        <div class="">
-            <h2 class="pt-5"> We Are On The Ultimate Mission To Make You See Beauty In Yourself Or Your Products.</h2>
+        <div class="row">
+            <div class="col-md-5 col-lg-5 col-sm-12">
+                <h1 class="hero-text"><strong>We Are On The Ultimate Mission To Make You See Beauty In Yourself Or Your Products.</strong> </h1>
+            </div>
+            <div class="col">
+                2 of 2
+            </div>
         </div>
+
     </div>
 </section>
 
