hero responsiveness optimized

--- a/Index3.html
+++ b/Index3.html
@@ -62,12 +62,16 @@
 <section class="hero">
     <div class="container text-light">
         <div class="row">
-            <div class="col-md-5 col-lg-5 col-sm-12">
+            <div class="col-md-6 col-lg-6 col-sm-12">
                 <h1 class="hero-text"><strong>We Are On The Ultimate Mission To Make You See Beauty In Yourself Or Your Products.</strong> </h1>
             </div>
             <div class="col">
-                2 of 2
+
             </div>
+        </div>
+
+        <div>
+            <button class="btn mt-3 px-4 pt-2 pb-2">Book Us Now </button>
         </div>
 
     </div>
