latest work section added

--- a/Index3.html
+++ b/Index3.html
@@ -3,78 +3,180 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" /> -->
+    <!-- <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/index3.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
     <title>Document</title>
 </head>
 
 <body>
-</body>
-<!-- header starts here -->
 
-<header>
-    <section class="container px-0">
-        <nav class="navbar navbar-expand-lg  navbar-light">
-            <a class="navbar-brand a-text flex" href="index3.html">
-                <img src="./index3-img/logo.svg" alt="Logo">
-            </a>
-            <button class="navbar-toggler" style="color: lemonchiffon !important;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- header starts here -->
+
+    <header>
+        <section class="container px-0">
+            <nav class="navbar navbar-expand-lg  navbar-light">
+                <a class="navbar-brand a-text flex" href="index3.html">
+                    <img src="./index3-img/logo.svg" alt="Logo">
+                </a>
+                <button class="navbar-toggler" style="color: lemonchiffon !important;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                <ul class="navbar-nav mr-auto">
+                    <ul class="navbar-nav mr-auto">
 
-                </ul>
+                    </ul>
 
-                <ul class="navbar-nav my-2 my-lg-0 ">
-                    <li class="nav-item active">
-                        <a class="nav-link mx-3" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link mx-3" href="#">Gallery</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link mx-3" href="#">About<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link mx-3" href="#"> Contact</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link mx-3" href="#"> Services</a>
-                    </li>
-                </ul>
+                    <ul class="navbar-nav my-2 my-lg-0 ">
+                        <li class="nav-item active">
+                            <a class="nav-link mx-3" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link mx-3" href="#">Gallery</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link mx-3" href="#">About<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link mx-3" href="#"> Contact</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link mx-3" href="#"> Services</a>
+                        </li>
+                    </ul>
 
+                </div>
+            </nav>
+        </section>
+    </header>
+
+    <section class="hero">
+        <div class="container text-light">
+            <div class="row">
+                <div class="col-md-6 col-lg-6 col-sm-12">
+                    <h1 class="hero-text"><strong>We Are On The Ultimate Mission To Make You See Beauty In Yourself Or Your Products.</strong> </h1>
+                </div>
+                <div class="col-md-6 col-lg-6 col-sm-12"></div>
             </div>
-        </nav>
+            <div class="btn-div">
+                <button class="btn mt-3 px-4 pt-2 pb-2">Book Us Now </button>
+            </div>
+        </div>
     </section>
-</header>
 
-<section class="hero">
-    <div class="container text-light">
-        <div class="row">
-            <div class="col-md-6 col-lg-6 col-sm-12">
-                <h1 class="hero-text"><strong>We Are On The Ultimate Mission To Make You See Beauty In Yourself Or Your Products.</strong> </h1>
+    <!-- Latest Work starts here -->
+    <!-- <section class="container mt-5">
+        <div class="row pt-5">
+            <div class="col-md-6 col-lg-6">
+
+                <div class="mb-5">
+                    <h5 class="font-weight-bold">
+                        Latest Works<span class="px-5"><img class="px-5 latest-img img-fluid" src="./index3-img/Line 1.png" alt=""></span></h5>
+                </div>
+
+                <div class="pt-4">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet habitant facilisis sapien massa duis. Consequat, vitae elit pellentesque fringilla. Non a, neque vitae dictum arcu.</p>
+                </div>
+
             </div>
-            <div class="col">
 
+            <div class="col-md-6 col-lg-6">
+                <img class="img-fluid" src="./index3-img/Ryan Dubik.png   " alt="Ryan Dubik">
+                <hr class="border-orange">
+
+                <div class="row">
+                    <div class="col">
+                        <p>Ryan Dubik</p>
+                    </div>
+                    <div class="col">
+                        <p class="float-right">13</p>
+                    </div>
+                </div>
+            </div>
+
+    </section> -->
+
+    <section class="container mt-5">
+        <div class="row pt-5">
+            <div class="col-md-5 col-lg-5">
+                <div class="mb-5">
+                    <h5 class="font-weight-bold">
+                        Latest Works<span class="px-4"><img class="px-4 latest-img img-fluid" src="./index3-img/Line 1.png" alt=""></span></h5>
+                </div>
+
+                <div class="pt-5">
+                    <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet habitant facilisis sapien massa duis. Consequat, vitae elit pellentesque fringilla. Non a, neque vitae dictum arcu.</p>
+                </div>
+            </div>
+
+            <div class="col-md-1 col-lg-1">
+                <div class="rectangle">
+                    <p class="text-center py-3 mx-2 my-3">Debby Linchen</p>
+                </div>
+
+            </div>
+            <div class="col-md-6 col-lg-6">
+                <img class="img-fluid" src="./index3-img/Ryan Dubik.png   " alt="Ryan Dubik">
+                <hr class="border-orange">
+
+                <div class="row font-weight-bold">
+                    <div class="col">
+                        <p>Ryan Dubik</p>
+                    </div>
+                    <div class="col">
+                        <p class="float-right"> 13 June, 2020</p>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div>
-            <button class="btn mt-3 px-4 pt-2 pb-2">Book Us Now </button>
+        <div class="row pt-5">
+            <div class="col-md-6 col-lg-6">
+                <img class="img-fluid" src="./index3-img/Emily.png " alt="Emily">
+                <hr class="border-orange">
+
+                <div class="row font-weight-bold">
+                    <div class="col">
+                        <p>Ryan Dubik</p>
+                    </div>
+                    <div class="col">
+                        <p class="float-right"> 13 June, 2020</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-1 col-lg-1">
+                <div class="rectangle">
+                    <p class="text-center py-3 mx-2 my-3">Emily Draplin </p>
+                </div>
+            </div>
+
+            <div class="col-md-5 col-lg-5">
+                <!-- <div class="mb-5">
+                    <h5 class="font-weight-bold">
+                        Latest Works<span class="px-4"><img class="px-4 latest-img img-fluid" src="./index3-img/Line 1.png" alt=""></span></h5>
+                </div> -->
+
+                <div class="pt-5">
+                    <p class="pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet habitant facilisis sapien massa duis. Consequat, vitae elit pellentesque fringilla. Non a, neque vitae dictum arcu.</p>
+                </div>
+            </div>
         </div>
 
-    </div>
-</section>
+    </section>
+
+    <section class="container mt-5">
+        <div class="pt-5"></div>
+    </section>
+</body>
 
 </html>
