services work section added

--- a/Index3.html
+++ b/Index3.html
@@ -120,7 +120,7 @@
 
             <div class="col-md-1 col-lg-1">
                 <div class="rectangle">
-                    <p class="text-center py-3 mx-2 my-3">Debby Linchen</p>
+                    <p class="text-center py-3 mx-2 my-4">Debby Linchen</p>
                 </div>
 
             </div>
@@ -155,17 +155,12 @@
             </div>
 
             <div class="col-md-1 col-lg-1">
-                <div class="rectangle">
-                    <p class="text-center py-3 mx-2 my-3">Emily Draplin </p>
+                <div class="rectangle-2">
+                    <p class="text-center py-3 mx-2 my-4">Emily Draplin </p>
                 </div>
             </div>
 
             <div class="col-md-5 col-lg-5">
-                <!-- <div class="mb-5">
-                    <h5 class="font-weight-bold">
-                        Latest Works<span class="px-4"><img class="px-4 latest-img img-fluid" src="./index3-img/Line 1.png" alt=""></span></h5>
-                </div> -->
-
                 <div class="pt-5">
                     <p class="pt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet habitant facilisis sapien massa duis. Consequat, vitae elit pellentesque fringilla. Non a, neque vitae dictum arcu.</p>
                 </div>
@@ -174,8 +169,30 @@
 
     </section>
 
+    <!-- Services starts here -->
+
     <section class="container mt-5">
-        <div class="pt-5"></div>
+        <div class=" row pt-5">
+            <div class="col-md-6 col-lg-6">
+                <hr class="border-orange mb-3">
+                <div class="mb-3">
+                    <h5 class="font-weight-bold">Services</h5>
+                </div>
+
+                <ul class="p-3">
+                    <li>Lorem ipsum dolor sit amet,</li>
+                    <li>Lorem ipsum dolor sit amet,</li>
+                    <li>Lorem ipsum dolor sit amet,</li>
+                    <li>Lorem ipsum dolor sit amet,</li>
+                </ul>
+
+                <button type="button" class="btn btn-outline-secondary btn-lg px-5">See More</button>
+            </div>
+
+            <div class="col-md-6 col-lg-6 ">
+                <div><img class="img-fluid" src="./index3-img/serices-img.png" alt=""></div>
+            </div>
+        </div>
     </section>
 </body>
 
