sessions section added

--- a/Index3.html
+++ b/Index3.html
@@ -173,7 +173,7 @@
 
     <section class="container mt-5">
         <div class=" row pt-5">
-            <div class="col-md-6 col-lg-6">
+            <div class="col-md-4 col-lg-4">
                 <hr class="border-orange mb-3">
                 <div class="mb-3">
                     <h5 class="font-weight-bold">Services</h5>
@@ -186,14 +186,50 @@
                     <li>Lorem ipsum dolor sit amet,</li>
                 </ul>
 
-                <button type="button" class="btn btn-outline-secondary btn-lg px-5">See More</button>
+                <button type="button" class="btn btn-outline-secondary btn-lg px-5 mb-5">See More</button>
             </div>
 
-            <div class="col-md-6 col-lg-6 ">
+            <div class="col-1"></div>
+
+            <div class="col-md-7 col-lg-7 ">
                 <div><img class="img-fluid" src="./index3-img/serices-img.png" alt=""></div>
             </div>
         </div>
     </section>
+
+    <section class="container mt-5">
+        <div class="row pt-5">
+            <div class="col-md-6 col-lg-6 ">
+                <div><img class="img-fluid" src="./index3-img/serices-img.png" alt=""><span></span></div>
+            </div>
+
+
+
+            <div class="col-md-6  col-lg-6">
+                <hr class="border-orange">
+                <div class="mx-5">
+                    <div>
+                        <h5 class="font-weight-bold mb-3">Sessions</h5>
+                    </div>
+                    <div>
+                        <p class="">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet habitant facilisis sapien massa duis. Consequat, vitae elit pellentesque fringilla. Non a, neque vitae dictum arcu.
+                        </p>
+                    </div>
+                    <button type="button" class="btn btn-outline-secondary btn-lg px-5 mb-5">Watch More</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="mt-5 pt-5">
+        <div class="container-fluid gallery">
+            <div class="container">
+
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
