gallery section added

--- a/Index3.html
+++ b/Index3.html
@@ -59,6 +59,7 @@
         </section>
     </header>
 
+    <!-- Hero here -->
     <section class="hero">
         <div class="container text-light">
             <div class="row">
@@ -74,43 +75,13 @@
     </section>
 
     <!-- Latest Work starts here -->
-    <!-- <section class="container mt-5">
-        <div class="row pt-5">
-            <div class="col-md-6 col-lg-6">
-
-                <div class="mb-5">
-                    <h5 class="font-weight-bold">
-                        Latest Works<span class="px-5"><img class="px-5 latest-img img-fluid" src="./index3-img/Line 1.png" alt=""></span></h5>
-                </div>
-
-                <div class="pt-4">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet habitant facilisis sapien massa duis. Consequat, vitae elit pellentesque fringilla. Non a, neque vitae dictum arcu.</p>
-                </div>
-
-            </div>
-
-            <div class="col-md-6 col-lg-6">
-                <img class="img-fluid" src="./index3-img/Ryan Dubik.png   " alt="Ryan Dubik">
-                <hr class="border-orange">
-
-                <div class="row">
-                    <div class="col">
-                        <p>Ryan Dubik</p>
-                    </div>
-                    <div class="col">
-                        <p class="float-right">13</p>
-                    </div>
-                </div>
-            </div>
-
-    </section> -->
 
     <section class="container mt-5">
         <div class="row pt-5">
             <div class="col-md-5 col-lg-5">
                 <div class="mb-5">
                     <h5 class="font-weight-bold">
-                        Latest Works<span class="px-4"><img class="px-4 latest-img img-fluid" src="./index3-img/Line 1.png" alt=""></span></h5>
+                        Latest Works<span class="px-4"><img class="px-4  latest-img img-fluid" src="./index3-img/Line 1.png" alt=""></span></h5>
                 </div>
 
                 <div class="pt-5">
@@ -197,13 +168,12 @@
         </div>
     </section>
 
+    <!-- Sessions here` -->
     <section class="container mt-5">
         <div class="row pt-5">
             <div class="col-md-6 col-lg-6 ">
                 <div><img class="img-fluid" src="./index3-img/serices-img.png" alt=""><span></span></div>
             </div>
-
-
 
             <div class="col-md-6  col-lg-6">
                 <hr class="border-orange">
@@ -222,14 +192,62 @@
         </div>
     </section>
 
-    <section class="mt-5 pt-5">
-        <div class="container-fluid gallery">
-            <div class="container">
+    <!-- GAllery Beins here -->
+    <section class="mt-5 gallery-head ">
+        <div class="container">
+            <div class="row pt-4 pb-4">
+
+
+                <img src="./index3-img/i1.png" alt="">
+                <img src="./index3-img/i2.png" alt="">
+                <img src="./index3-img/i3.png" alt="">
+                <img src="./index3-img/i4.png" alt="">
+                <img src="./index3-img/i5.png" alt="">
+                <img src="./index3-img/i6.png" alt="">
+                <img src="./index3-img/i6.png" alt="">
+                <img src="./index3-img/i7.png" alt="">
+                <img src="./index3-img/i8.png" alt="">
+                <img src="./index3-img/i9.png" alt="">
+                <img src="./index3-img/i10.png" alt="">
+                <img src="./index3-img/i11.png" alt="">
+                <img src="./index3-img/i12.png" alt="">
+                <img src="./index3-img/i13.png" alt="">
+                <img src="./index3-img/i14.png" alt="">
+                <img src="./index3-img/i5.png" alt="">
+                <img src="./index3-img/i6.png" alt="">
+                <img src="./index3-img/i7png" alt="">
+                <img src="./index3-img/i8.png" alt="">
+                <img src="./index3-img/i9.png" alt="">
+                <img src="./index3-img/i20.png" alt="">
+                <img src="./index3-img/i21.png" alt="">
 
             </div>
         </div>
+        </div>
+        </div>
     </section>
+    <!-- 
+    <div class="gallery">
 
+        <figure class=”gallery__item gallery__item--1 ">
+            <img src="img/image-1.jpg " class="gallery__img " alt="Image 1 ">
+          </figure>
+          <figure class="gallery__item gallery__item--2 ">
+            <img src="img/image-2.jpg " class="gallery__img " alt="Image 2 ">
+          </figure>
+          <figure class="gallery__item gallery__item--3 ">
+            <img src="img/image-3.jpg " class="gallery__img " alt="Image 3 ">
+          </figure>
+          <figure class="gallery__item gallery__item--4 ">
+            <img src="img/image-4.jpg " class="gallery__img " alt="Image 4 ">
+          </figure>
+          <figure class="gallery__item gallery__item--5 ">
+            <img src="img/image-5.jpg " class="gallery__img " alt="Image 5 ">
+          </figure>
+          <figure class="gallery__item gallery__item--6 ">
+            <img src="img/image-6.jpg " class="gallery__img " alt="Image 6 ">
+          </figure>
+    </div> -->
 </body>
 
 </html>
