top photographers section added

--- a/Index3.html
+++ b/Index3.html
@@ -193,61 +193,83 @@
     </section>
 
     <!-- GAllery Beins here -->
-    <section class="mt-5 gallery-head ">
-        <div class="container">
-            <div class="row pt-4 pb-4">
+    <section class="mt-5 pt-5">
+        <div class="gallery-head">
 
 
-                <img src="./index3-img/i1.png" alt="">
-                <img src="./index3-img/i2.png" alt="">
-                <img src="./index3-img/i3.png" alt="">
-                <img src="./index3-img/i4.png" alt="">
-                <img src="./index3-img/i5.png" alt="">
-                <img src="./index3-img/i6.png" alt="">
-                <img src="./index3-img/i6.png" alt="">
-                <img src="./index3-img/i7.png" alt="">
-                <img src="./index3-img/i8.png" alt="">
-                <img src="./index3-img/i9.png" alt="">
-                <img src="./index3-img/i10.png" alt="">
-                <img src="./index3-img/i11.png" alt="">
-                <img src="./index3-img/i12.png" alt="">
-                <img src="./index3-img/i13.png" alt="">
-                <img src="./index3-img/i14.png" alt="">
-                <img src="./index3-img/i5.png" alt="">
-                <img src="./index3-img/i6.png" alt="">
-                <img src="./index3-img/i7png" alt="">
-                <img src="./index3-img/i8.png" alt="">
-                <img src="./index3-img/i9.png" alt="">
-                <img src="./index3-img/i20.png" alt="">
-                <img src="./index3-img/i21.png" alt="">
+            <div class="container">
+                <div class="row pt-4 pb-4">
 
+
+                    <img src="./index3-img/i1.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i2.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i3.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i4.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i5.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i6.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i7.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i8.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i9.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i10.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i11.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i12.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i13.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i14.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i15.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i16.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i17.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i18.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i19.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i20.png" class="img-fluid" alt="">
+                    <img src="./index3-img/i21.png" class="img-fluid" alt="">
+
+                </div>
             </div>
         </div>
         </div>
         </div>
     </section>
-    <!-- 
-    <div class="gallery">
 
-        <figure class=”gallery__item gallery__item--1 ">
-            <img src="img/image-1.jpg " class="gallery__img " alt="Image 1 ">
-          </figure>
-          <figure class="gallery__item gallery__item--2 ">
-            <img src="img/image-2.jpg " class="gallery__img " alt="Image 2 ">
-          </figure>
-          <figure class="gallery__item gallery__item--3 ">
-            <img src="img/image-3.jpg " class="gallery__img " alt="Image 3 ">
-          </figure>
-          <figure class="gallery__item gallery__item--4 ">
-            <img src="img/image-4.jpg " class="gallery__img " alt="Image 4 ">
-          </figure>
-          <figure class="gallery__item gallery__item--5 ">
-            <img src="img/image-5.jpg " class="gallery__img " alt="Image 5 ">
-          </figure>
-          <figure class="gallery__item gallery__item--6 ">
-            <img src="img/image-6.jpg " class="gallery__img " alt="Image 6 ">
-          </figure>
-    </div> -->
+    <!-- Top photographers -->
+
+    <section class=" container mt-5 pt-5">
+        <h5 class="font-weight-bold text-center mb-3">Our Top Photographers </h5>
+        <div class="row ">
+
+            <div class="col-md-4 col-lg-4">
+                <div class="card my-2">
+                    <img class="card-img-top img-fluid" src="./index3-img/Debby.png" alt="Debby">
+                    <div class="card-body ">
+                        <p class="card-text text-center "><span>Debby Gerard </span> </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-lg-4">
+                <div class="card my-2">
+                    <img class="card-img-top img-fluid" src="./index3-img/Derek.png" alt="Derek ">
+                    <div class="card-body ">
+                        <p class="card-text text-center "><span>Derek Grafindor</span> </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 col-lg-4">
+                <div class="card my-2">
+                    <img class="card-img-top img-fluid" src="./index3-img/Jedidiah.png" alt="Jedidiah ">
+                    <div class="card-body ">
+                        <p class="card-text text-center "><span>Jedidiah Asamoah</span> </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- Contact Us -->
+    <section class="container mt-5">
+
+    </section>
 </body>
 
 </html>
